# app/Http/Controllers/Api/UserController.php
@@ -3,6 +3,7 @@ declare(strict_types=1);
 
 namespace App\Http\Controllers\Api;
 
+use App\Http\Requests\Api\UserSaveRequest;
 use Illuminate\Http\Request;
 use OpenApi\Annotations as OA;
 
@@ -53,8 +54,84 @@ class UserController
             $users = User::all();
         }
 
-        return $this->json->response([
-            UserResource::collection($users)
+        return $this->json->response(data: [
+            'users' => UserResource::collection($users)
+        ]);
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/users/{id}",
+     *     security={{ "sanctum": {"*"} }},
+     *     operationId="user profile show",
+     *     tags={"Users"},
+     *     summary="Show user profile by ID",
+     *     @OA\Parameter(
+     *         description="User ID",
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         @OA\Schema(type="integer"),
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\JsonContent(ref="#/components/schemas/UserResource"),
+     *     )
+     * )
+     *
+     * Display the specified resource.
+     *
+     * @param \App\Models\User $user
+     *
+     * @return \Illuminate\Http\JsonResponse
+     */
+    public function show(User $user): \Illuminate\Http\JsonResponse
+    {
+        return $this->json->response(data: [
+            'user' => UserResource::make($user),
+        ]);
+    }
+
+    /**
+     * @OA\Put(
+     *     path="/users/{id}",
+     *     security={{ "sanctum": {"*"} }},
+     *     operationId="update user profile",
+     *     tags={"Users"},
+     *     summary="Update user profile",
+     *     @OA\Parameter(
+     *         description="User ID",
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         @OA\Schema(type="integer"),
+     *     ),
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(ref="#/components/schemas/UserSaveRequest"),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\JsonContent(ref="#/components/schemas/UserResource"),
+     *     )
+     * )
+     * Update the specified resource in storage.
+     *
+     * @param \App\Http\Requests\Api\UserSaveRequest $request
+     * @param \App\Models\User $user
+     *
+     * @return \Illuminate\Http\JsonResponse
+     */
+    public function update(UserSaveRequest $request, User $user): \Illuminate\Http\JsonResponse
+    {
+        $user->update($request->validated());
+
+        return $this->json->response(data: [
+            'user' => UserResource::make($user),
         ]);
     }
 }
